packages/taquito-michel-codec/test/contracts_015/ill_typed/fail_rec.tz
{ parameter unit;
  storage unit;
  code { CAR;
         LAMBDA_REC unit unit { };
         SWAP;
         EXEC;
         NIL operation;
         PAIR}}
